--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <title>Joel Meyer Porfolio Site</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- to "normalize" and not reset all the css of every browsers -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- for the icons -->
-        <link rel="icon" href="picture/BlackBeard_logo.png">
-         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap"> <!-- for the typography1  -->
-         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"> <!-- for the typography2 -->
+        <!--<link rel="icon" href="picture/BlackBeard_logo.png">-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap"> <!-- for the typography1  -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap"> <!-- for the typography2 -->
         <link rel="stylesheet" href="css/style.css" >
     </head>
     <body>
         <header>
-            <div class="logo">
+            <!--<div class="logo">
                 <img src="picture/BlackBeard_logo.png" alt="" >
-            </div>
+            </div>-->
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger" ></span>
             </button>
@@ -46,7 +46,7 @@
                 
                 <div class="tech">
                     <h3>Front-End</h3>
-                    <p>React, Javascript, HTML, CSS, Axios, Netlify.</p>
+                    <p>React, Vue3, Javascript, HTML, CSS, Bootstrap, Jquery, Netlify.</p>
                 </div> <!-- end of tech -->
 
                 <div class="tech">
@@ -70,11 +70,14 @@
             <p class="section__subtitle section__subtitle--about">Becoming a software developer</p>
             <div class="about-me__body">
                 <p>I was employed by Emirates Airline for over 12 years until I was made redundant due to the economic climate created by covid-19 virus.</p>
-                <p>I took this as an opportunity for a change of career to software development as it is something that I always fancied to give a go but never took the leap. </p>
-                <p>I have been taking part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a> from whom I graduated since.<br>
-                I have been introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify. I’m now fully rehearsed in applying my newly acquired coding skills and seeking the opportunity to start my career in the front end to further develop my experience and skills in this sector.</p>
-                <p>Since the end of the course, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a>, <a href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864">CodinGame</a> and <a href="https://www.freecodecamp.org/mr-joel">FreeCodeCamp</a>, and try to learn as much as possible about React or anything related to frontend development.</p>
+                <p>I took this as an opportunity for a change of career to software development as it is something that I always aspired to, but never took the leap.</p>
+                <p>I took part in a full time 14 weeks coding bootcamp with <a href="https://northcoders.com/">Northcoders</a> where I graduated. I was introduced to every aspect of full-stack development, from the fundamentals to the back end where we built our own servers, to the front end using React and deploying on Netlify.</p>
+                <p>I have since taken a position as a Junior UI Front End Developer in a small digital agency. I have been making numerous bespoke websites using HTML, CSS, javascript, bootstrap, jquery and some Vue.js.</p>
+                <p>I really enjoy my position in this company and I've learned a lot. However working as a civil servant is something that I've been aiming towards since I started coding, but the opportunity never presented itself at the right time until now.</p>
+                <p>I am a creative individual eager to learn and progress, who can perform enthusiastically as part of a team as well as solo.</p>
+                <!--<p>In my spare time, I continue to sharpen my skills on <a href="https://www.codecademy.com/profiles/mr-joelM">Codecademy</a>, <a href="https://www.codingame.com/profile/f197271462096a94182f33f55fa1afbb9976864">CodinGame</a> and <a href="https://www.freecodecamp.org/mr-joel">FreeCodeCamp</a>, i have also started to learn about Python for the interview that i hope will be to come.</p>-->
             </div>
+
 
             <img class="about-me__img" src="picture/IMG_standing-in-sunset2.jpg" alt="Joel standing in sunset near Whitby coast" >
         </section>
